--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,10 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3.x
+        uses: actions/checkout
 
       - name: Use Node.js 20.x
-        uses: actions/setup-node@v3.x
+        uses: actions/setup-node
         with:
           node-version: 20
 
