--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -11,21 +8,29 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: '20.x'
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        node-version: ['20.x']
+        # For future flexibility, you can add more node versions like '18.x', '16.x', etc.
+        # Example: node-version: ['16.x', '18.x', '20.x']
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+        cache: 'npm'  # This will cache npm dependencies
+
+    - name: Install dependencies
+      run: npm ci  # Clean install from package-lock.json
+
+    - name: Build the project
+      run: npm run build --if-present  # Build only if a build script is defined
+
+    - name: Run tests
+      run: npm test  # Run tests
